bk_ida/gccida/g0/field_byte_offset
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/field_byte_offset/src/dwarf2out.c:8878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/field_byte_offset/src/dwarf2out.c:8884:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // [rsp+30h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/field_byte_offset/src/dwarf2out.c:8886:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *field_size_tree; // [rsp+40h] [rbp-10h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/field_byte_offset/src/dwarf2out.c:8896:32: error: expected expression
field_size_tree = ( tree_node *)*( &global_trees + 17); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/field_byte_offset/src/dwarf2out.c:8896:21: error: use of undeclared identifier 'tree_node'
field_size_tree = ( tree_node *)*( &global_trees + 17); 
                    ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/field_byte_offset/src/obj/dwarf2out.o] Error 1
